# codelab-tools

./: CLAAT-GUIDE.md  MARKDOWN-FORMAT-GUIDE.md  README.md  RELEASE_NOTES.md  app.js  codelabs.json  index.html  package.json  style.css
.github/workflows/: claat-release.yml  deploy-catalog.yml  release.yml
claat/: Makefile  README.md  go.mod  go.sum  main.go
claat/cmd/: catalog.go  export.go  export_test.go  update.go
claat/fetch/: fetch.go
claat/nodes/: grid.go  iframe.go
claat/parser/: parse.go
claat/parser/gdoc/: parse.go  parse_test.go
claat/parser/md/: README.md  parse.go  parse_test.go
claat/render/: html.go  html_test.go  template.go  template.html  template.md
claat/types/: codelab.go  context.go
claat/util/: util.go
claat/wasm/: main.go
codelab-elements/: BUILD.bazel  README.md
codelab-elements/demo/: codelab.html  embed.html
codelab-elements/google-codelab/: BUILD.bazel  _drawer.scss  google_codelab.js  google_codelab.scss  google_codelab.soy  index.html  index.scss
codelab-elements/google-codelab-about/: BUILD.bazel  google_codelab_about.js  google_codelab_about.scss  google_codelab_about.soy
codelab-elements/google-codelab-analytics/: BUILD.bazel
codelab-elements/google-codelab-catalog/: BUILD.bazel  google_codelab_catalog.js  google_codelab_catalog.scss  google_codelab_catalog.soy  google_codelab_catalog_def.js
codelab-elements/google-codelab-step/: BUILD.bazel  _syntax.scss  google-codelab-step.html  google_codelab_step.js  google_codelab_step.scss
codelab-elements/google-codelab-survey/: BUILD.bazel  google_codelab_survey.scss
codelab-elements/tools/: defs.bzl
codelabs/: create-a-codelab.md  regex-complete-guide.md  test-all-features.md
create-a-codelab/: codelab.json  index.html
gdoc-codelab-addon/: Code.gs  ColorPalette.gs  DEVELOPMENT.md  Detection.gs  Formatting.gs  README.md  Sidebar.html  Validation.gs  package-lock.json
regex-complete-crash-course/: codelab.json  index.html
sample/: test-all-features.md
sample-codelabs/: create-a-codelab.md  regex-complete-guide.md  test-all-features.md
sample/test-all-features/: codelab.json  index.html
test-all-features/: codelab.json  index.html
