package(default_visibility = ["//visibility:public"])

load("//codelab-elements/tools:defs.bzl", "concat")

filegroup(
    name = "all_files",
    srcs = [
        ":codelab_elements_js",
        ":codelab_elements_css",
    ],
)

genrule(
    name = "codelab_elements_js",
    outs = ["codelab-elements.min.js"],
    srcs = [
        "//codelab-elements/google-codelab-analytics:google_codelab_analytics_bin",
        "//codelab-elements/google-codelab:google_codelab_bin",
        "//codelab-elements/google-codelab-about:google_codelab_about_bin",
        "//codelab-elements/google-codelab-step:google_codelab_step_bin",
        "//codelab-elements/google-codelab-survey:google_codelab_survey_bin",
        "//codelab-elements/google-codelab-catalog:google_codelab_catalog_bin",
    ],
    cmd = concat("js"),
)

genrule(
    name = "codelab_elements_css",
    outs = ["codelab-elements.min.css"],
    srcs = [
        "//codelab-elements/google-codelab:google_codelab_scss_bin",
        "//codelab-elements/google-codelab-about:google_codelab_about_scss_bin",
        "//codelab-elements/google-codelab-step:google_codelab_step_scss_bin",
        "//codelab-elements/google-codelab-survey:google_codelab_survey_scss_bin",
        "//codelab-elements/google-codelab-catalog:google_codelab_catalog_scss_bin",
    ],
    cmd = concat("css"),
)
